[gd_scene load_steps=9 format=1]

[ext_resource path="res://BattleMap.gd" type="Script" id=1]
[ext_resource path="res://HUDLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/foe_pink.png" type="Texture" id=4]
[ext_resource path="res://fonts/markerfelt.fnt" type="BitmapFont" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="HUDLayer" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 511.215, 301 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 765.891, 575.438 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 15 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]

transform/pos = Vector2( 0, 15 )
transform/scale = Vector2( 2, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

transform/pos = Vector2( 0, 15 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 20, 0, 0, 20, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]

transform/scale = Vector2( 20, 20 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="KinematicBody2D1" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 438.04, 25.8471 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 15 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D1" type="CollisionShape2D" parent="KinematicBody2D1"]

transform/pos = Vector2( 0, 15 )
transform/scale = Vector2( 2, 2 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Sprite1" type="Sprite" parent="KinematicBody2D1"]

texture = ExtResource( 4 )

[node name="Area2D1" type="Area2D" parent="KinematicBody2D1"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 20, 0, 0, 20, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D1/Area2D1"]

transform/scale = Vector2( 20, 20 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="KinematicBody2D2" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 116.992, 428.518 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 15 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D2"]

transform/pos = Vector2( 0, 15 )
transform/scale = Vector2( 2, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite2" type="Sprite" parent="KinematicBody2D2"]

texture = ExtResource( 4 )

[node name="Area2D2" type="Area2D" parent="KinematicBody2D2"]

transform/pos = Vector2( 0, 10 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 20, 0, 0, 20, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D2/Area2D2"]

transform/scale = Vector2( 20, 20 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="KinematicBody2D3" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 1086.94, 167.326 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 15 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KinematicBody2D3"]

transform/pos = Vector2( 0, 15 )
transform/scale = Vector2( 2, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite3" type="Sprite" parent="KinematicBody2D3"]

texture = ExtResource( 4 )

[node name="Area2D3" type="Area2D" parent="KinematicBody2D3"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 20, 0, 0, 20, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D3/Area2D3"]

transform/scale = Vector2( 20, 20 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 418.0
margin/top = 260.0
margin/right = 475.0
margin/bottom = 286.0
custom_fonts/font = ExtResource( 5 )
text = "Battle"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 550.0
margin/top = 290.0
margin/right = 607.0
margin/bottom = 316.0
custom_fonts/font = ExtResource( 5 )
text = "Begins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_exit"]


